Update for video face detection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,9 @@ find_package( OpenCV REQUIRED )
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
+option(OPENCV_DNN_OPENCL_ALLOW_ALL_DEVICES 1)
+set(OPENCV_OPENCL_DEVICE NVIDIA:GPU:)
+option(WITH_CUDA "Enable CUDA support" ON)
 
 include_directories( ${OpenCV_INCLUDE_DIRS}
                     ./ 
@@ -13,6 +16,7 @@ add_executable(
             opencv_yolo
             # Dependence source files
             main.cpp 
-            yoloNet.cpp 
+            yoloNet.cpp
+            yoloNet.hpp
         )
 target_link_libraries( opencv_yolo ${OpenCV_LIBS} )
